--- a/examples/avatars.html
+++ b/examples/avatars.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js'></script>
     <script src='../../center.js'></script>
 </head>
 
@@ -17,7 +17,6 @@
 </html>
 
 <script>
-
     WebFont.load({
         google: {
             families: ['Leckerli One']
