--- a/examples/shapes.html
+++ b/examples/shapes.html
@@ -1,49 +1,47 @@
 <html>
+  <head>
+    <script src="../../center.js"></script>
+  </head>
 
-<head>
-    <script src='../../center.js'></script>
-</head>
-
-<body>
-    <canvas id='square'></canvas>
-    <canvas id='circle'></canvas>
-    <canvas id='rounded'></canvas>
-</body>
-
+  <body>
+    <canvas id="square"></canvas>
+    <canvas id="circle"></canvas>
+    <canvas id="rounded"></canvas>
+  </body>
 </html>
 
 <script>
-    centerjs({
-        canvas: document.getElementById('square'),
-        width: 64,
-        height: 64,
-        shape: 'square',
-        fontColor: 'white',
-        backgroundColor: '#FFC300',
-        text: 'C',
-        fontFamily: 'Helvetica',
-        fontSize: 48
-    });
-    centerjs({
-        canvas: document.getElementById('circle'),
-        width: 64,
-        height: 64,
-        shape: 'circle',
-        fontColor: 'white',
-        backgroundColor: '#FFC300',
-        text: 'C',
-        fontFamily: 'Helvetica',
-        fontSize: 48
-    });
-    centerjs({
-        canvas: document.getElementById('rounded'),
-        width: 64,
-        height: 64,
-        shape: 'rounded',
-        fontColor: 'white',
-        backgroundColor: '#FFC300',
-        text: 'C',
-        fontFamily: 'Helvetica',
-        fontSize: 48
-    });
+  centerjs({
+    canvas: document.getElementById("square"),
+    width: 64,
+    height: 64,
+    shape: "square",
+    fontColor: "white",
+    backgroundColor: "#FFC300",
+    text: "C",
+    fontFamily: "Helvetica",
+    fontSize: 48,
+  });
+  centerjs({
+    canvas: document.getElementById("circle"),
+    width: 64,
+    height: 64,
+    shape: "circle",
+    fontColor: "white",
+    backgroundColor: "#FFC300",
+    text: "C",
+    fontFamily: "Helvetica",
+    fontSize: 48,
+  });
+  centerjs({
+    canvas: document.getElementById("rounded"),
+    width: 64,
+    height: 64,
+    shape: "rounded",
+    fontColor: "white",
+    backgroundColor: "#FFC300",
+    text: "C",
+    fontFamily: "Helvetica",
+    fontSize: 48,
+  });
 </script>
