--- a/examples/usage.html
+++ b/examples/usage.html
@@ -1,25 +1,23 @@
 <html>
+  <head>
+    <script src="../../center.js"></script>
+  </head>
 
-<head>
-    <script src='../../center.js'></script>
-</head>
-
-<body>
-    <canvas id='usage-1'></canvas>
-</body>
-
+  <body>
+    <canvas id="usage-1"></canvas>
+  </body>
 </html>
 
 <script>
-    centerjs({
-        canvas: document.getElementById('usage-1'),
-        width: 64,
-        height: 64,
-        shape: 'square',
-        fontColor: '#581845',
-        backgroundColor: '#DAF7A6',
-        text: 'C',
-        fontFamily: 'Helvetica',
-        fontSize: 48
-    });
+  centerjs({
+    canvas: document.getElementById("usage-1"),
+    width: 64,
+    height: 64,
+    shape: "square",
+    fontColor: "#581845",
+    backgroundColor: "#DAF7A6",
+    text: "C",
+    fontFamily: "Helvetica",
+    fontSize: 48,
+  });
 </script>
