--- a/examples/icons.html
+++ b/examples/icons.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="../../center.js"></script>
   </head>
 
   <body>
@@ -11,13 +10,15 @@
   </body>
 </html>
 
-<script>
+<script type="module">
+  import CenterJS from "../dist/center.mjs";
+
   WebFont.load({
     google: {
       families: ["Leckerli One"],
     },
     active: function () {
-      centerjs({
+      new CenterJS({
         canvas: document.getElementById("icons-1"),
         width: 64,
         height: 64,
@@ -27,8 +28,8 @@
         text: "😎",
         fontFamily: "Leckerli One",
         fontSize: 50,
-      });
-      centerjs({
+      }).generate();
+      new CenterJS({
         canvas: document.getElementById("icons-2"),
         width: 64,
         height: 64,
@@ -38,8 +39,8 @@
         text: "🎆",
         fontFamily: "Leckerli One",
         fontSize: 50,
-      });
-      centerjs({
+      }).generate();
+      new CenterJS({
         canvas: document.getElementById("icons-3"),
         width: 64,
         height: 64,
@@ -49,7 +50,7 @@
         text: "👍",
         fontFamily: "Leckerli One",
         fontSize: 50,
-      });
+      }).generate();
     },
   });
 </script>
