--- a/examples/dimensions.html
+++ b/examples/dimensions.html
@@ -10,8 +10,8 @@
 
 <script type="module">
   import CenterJS from "../dist/center.mjs";
-  new CenterJS({
-    canvas: document.getElementById("square"),
+  let canvas = document.getElementById("square");
+  new CenterJS(canvas).generate({
     width: 128,
     height: 64,
     shape: "square",
@@ -20,9 +20,10 @@
     text: "C",
     fontFamily: "Helvetica",
     fontSize: 48,
-  }).generate();
-  new CenterJS({
-    canvas: document.getElementById("circle"),
+  });
+
+  canvas = document.getElementById("circle");
+  new CenterJS(canvas).generate({
     width: 128,
     height: 128,
     shape: "circle",
@@ -31,9 +32,10 @@
     text: "C",
     fontFamily: "Helvetica",
     fontSize: 48,
-  }).generate();
-  new CenterJS({
-    canvas: document.getElementById("rounded"),
+  });
+
+  canvas = document.getElementById("rounded");
+  new CenterJS(canvas).generate({
     width: 64,
     height: 128,
     shape: "rounded",
@@ -42,5 +44,5 @@
     text: "C",
     fontFamily: "Helvetica",
     fontSize: 48,
-  }).generate();
+  });
 </script>
