--- a/examples/google-web-fonts.html
+++ b/examples/google-web-fonts.html
@@ -16,8 +16,8 @@
       families: ["Aladin"],
     },
     active: function () {
-      new CenterJS({
-        canvas: document.getElementById("google-web-fonts-1"),
+      const canvas = document.getElementById("google-web-fonts-1");
+      new CenterJS(canvas).generate({
         width: 256,
         height: 128,
         shape: "rounded",
@@ -26,7 +26,7 @@
         text: "canvas",
         fontFamily: "Aladin",
         fontSize: 80,
-      }).generate();
+      });
     },
   });
 </script>
