--- a/examples/logos.html
+++ b/examples/logos.html
@@ -16,8 +16,8 @@
       families: ["Leckerli One"],
     },
     active: function () {
-      new CenterJS({
-        canvas: document.getElementById("logo"),
+      const canvas = document.getElementById("logo");
+      new CenterJS(canvas).generate({
         width: 256,
         height: 64,
         shape: "rounded",
@@ -26,7 +26,7 @@
         text: "center.js",
         fontFamily: "Leckerli One",
         fontSize: 50,
-      }).generate();
+      });
     },
   });
 </script>
